--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,9 +20,10 @@ version = "0.1.2"
 
 
 [tool.poetry.dependencies]
+GitPython = "^3.1.37"
 httpx = "^0.24.0"
 jinja2 = "^3.1.2"
-langchain = "^0.0.163"
+langchain = "^0.0.312"
 openai = "^0.27.6"
 pydantic = "^1.10.7"
 pyfiglet = "^0.8.post1"
